--- a/src/app/components/videos/videos.component.scss
+++ b/src/app/components/videos/videos.component.scss
@@ -37,7 +37,10 @@
   grid-template-columns: 26% 1fr 18%;
   grid-template-rows: auto;
   grid-template-areas: "sourceList videosContainer videoSettings";
-  height: 100%;
+  position: absolute;
+  width: 100%;
+  top: 56px;
+  height: 94%;
 }
 
 .sourceList {
